# claw-link

./: .gitignore  Anchor.toml  Cargo.toml  README.md  SKILL.md  WHITEPAPER.md  package-lock.json  package.json  tsconfig.json
programs/clawlink-protocol/: Cargo.toml
programs/clawlink-protocol/src/: lib.rs
programs/messaging/src/: lib.rs
programs/payments/: Cargo.toml
programs/payments/src/: lib.rs
scripts/: create-devnet-clink.ts  e2e-devnet-full.ts  e2e-devnet.ts  e2e-send.ts  e2e-unified.ts  full-ecosystem-demo.ts  init-payments.ts  read-inbox.ts  setup-devnet.ts
sdk/: package.json  tsconfig.json
sdk/src/: client.ts  crypto.ts  index.ts  types.ts
site/: index.html  skill.md
tests/: clawlink-protocol.ts  payments.ts
worker/: package-lock.json  package.json  schema.sql  wrangler.toml
worker/src/: auth.ts  db.ts  inbox_fragment.ts  index.ts  index_new.ts  types.ts
