[package]
name = "clawlink-protocol"
version = "0.1.0"
description = "ClawLink — Solana-native encrypted messaging protocol for AI agents"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "clawlink_protocol"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
blake3 = { workspace = true }
