[package]
name = "claw-cash-protocol"
version = "0.2.0"
description = "Claw Cash Protocol v2 — Tornado Cash-style private payment mixer on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "claw_cash_protocol"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
