[package]
name = "claw-link-payments"
version = "0.3.0"
description = "Claw Link Payments — Tornado Cash-style private payment mixer on Solana (CLINK token)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "claw_link_payments"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
